# kidar-rust-3d

./: Cargo.toml  README.md
src/: app.rs  constants.rs  lib.rs  main.rs
src/calc/: angle.rs  camera.rs  pos.rs
src/element/: action.rs  base.rs  cube.rs  mod.rs
src/render/: camera.rs  draw.rs  element.rs  layout.rs  mod.rs  pipeline.rs  ui.rs  vertex.rs  wgpu_ctx.rs
src/template/: shader.wgsl
src/views/: home.rs  operation.rs
