[package]
name = "kidar-rust-3d"
version = "0.1.0"
edition = "2021"

# cdylib: 支持构建在浏览器中运行的 Web Assembly（兼容c/c++库）;  rlib: 构建一个rust静态库
# [lib]
# crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.30.0"
wgpu = "^25.0.0"          # GPU 渲染 API
nalgebra = "^0.32"      # 数学库（矩阵和向量）
pollster = "0.4.0"
bytemuck = "1.21.0"
env_logger = "0.11.8"
wasm-bindgen = "0.2" # 浏览器wasm打包需要
